# learningOpencv

./: README.md
few codes/Mat/: CMakeLists.txt
few codes/scan image/: CMakeLists.txt  scan_image.cpp
tutorial_code/ImgProc/Morphology/: CMakeLists.txt
tutorial_code/ImgProc/Smoothing/: CMakeLists.txt
tutorial_code/ImgProc/basic_drawing/: CMakeLists.txt
tutorial_code/core/AddingImages/: AddingImages.cpp  CMakeLists.txt
tutorial_code/core/basicLinearTransforms/: CMakeLists.txt  ytransform.cpp
tutorial_code/core/discrete_fourier_transform/: CMakeLists.txt
tutorial_code/core/file_input_output/: CMakeLists.txt
tutorial_code/core/how_to_use_OpenCV_parallel_for_/: CMakeLists.txt
tutorial_code/core/mat_mask_operations/: CMakeLists.txt
